static/styles/style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans);
@import url(https://fonts.googleapis.com/css?family=Nunito:400,700);


html{
  font-family: 'Nunito', sans-serif;
}

body{
background: #ffffff;
font-family: 'Open Sans', sans-serif;
}

#search{
    text-transform: uppercase;
    font-size: 27px;
    font-weight: bold;
    color: rgb(50, 138, 197);
    letter-spacing: 0.10em;
}

li{
  list-style: none;
  text-align: center;
  font-size: 1vw;
}


[id^="flex-item--results"]{
  width: 200px;
  background-color: rgb(69, 182, 154);
  border-left: 2px solid  rgb(69, 182, 154);
  border-right: 2px solid rgb(69, 182, 154);
  border-bottom: 2px solid rgb(69, 182, 154);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  line-height: 1.4;
  color: #444444;
  margin-bottom: 60px;
}

.flex-item--header{
  background-color: rgb(56, 139, 119);
  border: 2px solid rgb(56, 139, 119);
  border-radius: 8px;
  color: #444444;
  line-height: 1.6;
  font-weight: 700;
  text-align: center;
  padding: 15px;
  font-size: 1.2vw;
}

#flex-row{
  justify-content: space-around;
  flex-flow: row wrap;
  display: flex;
}


/* loading animation */
.lds-roller {
    display: inline-block;
    position: relative;
    width: 64px;
    height: 64px;
  }
  .lds-roller div {
    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
    transform-origin: 32px 32px;
  }
  .lds-roller div:after {
    content: " ";
    display: block;
    position: absolute;
    width: 6px;
    height: 6px;
    border-radius: 50%;
    background: rgb(0, 0, 0);
    margin: -3px 0 0 -3px;
  }
  .lds-roller div:nth-child(1) {
    animation-delay: -0.036s;
  }
  .lds-roller div:nth-child(1):after {
    top: 50px;
    left: 50px;
  }
  .lds-roller div:nth-child(2) {
    animation-delay: -0.072s;
  }
  .lds-roller div:nth-child(2):after {
    top: 54px;
    left: 45px;
  }
  .lds-roller div:nth-child(3) {
    animation-delay: -0.108s;
  }
  .lds-roller div:nth-child(3):after {
    top: 57px;
    left: 39px;
  }
  .lds-roller div:nth-child(4) {
    animation-delay: -0.144s;
  }
  .lds-roller div:nth-child(4):after {
    top: 58px;
    left: 32px;
  }
  .lds-roller div:nth-child(5) {
    animation-delay: -0.18s;
  }
  .lds-roller div:nth-child(5):after {
    top: 57px;
    left: 25px;
  }
  .lds-roller div:nth-child(6) {
    animation-delay: -0.216s;
  }
  .lds-roller div:nth-child(6):after {
    top: 54px;
    left: 19px;
  }
  .lds-roller div:nth-child(7) {
    animation-delay: -0.252s;
  }
  .lds-roller div:nth-child(7):after {
    top: 50px;
    left: 14px;
  }
  .lds-roller div:nth-child(8) {
    animation-delay: -0.288s;
  }
  .lds-roller div:nth-child(8):after {
    top: 45px;
    left: 10px;
  }
  @keyframes lds-roller {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  

